fix(core/pipeline): Resolved pipeline header alignment issue by ellipsis account tag name in pipeline execution

--- a/app/scripts/modules/core/src/pipeline/executions/executionGroup/executionGroup.less
+++ b/app/scripts/modules/core/src/pipeline/executions/executionGroup/executionGroup.less
@@ -127,3 +127,12 @@
   display: block;
   margin-bottom: 5px;
 }
+
+.account-tag-name {
+  max-width: 250px;
+  span {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
